# orders_db

./: .gitignore  LICENSE
basic/: CMakeLists.txt  Cryptor.cpp  Cryptor.h  Delegate.h  Directory.h  Exception.cpp  Exception.h  FileSystem.h  IProperties.h  ImmutableString.h  Makefile  NumericTypeWrapper.h  ParametersManager.cpp  ParametersManager.cpp~  ParametersManager.h  ParametersManager.h~  Path.h  Process.h  PropertiesFile.cpp  PropertiesFile.h  TextConv.cpp  TextConv.h  XConv.h  XString.h  basic.sln  basic.txt  basic.vcxproj  basic.vcxproj.filters  chars.h  dll_definitions.h  locale_init.h  tfstream.h  tstream.h  tstring.h
basic/Debug/: basic.idb
basic/basic_test/: CMakeLists.txt  DirectoryTests.cpp  ExceptionTests.cpp  XStringTests.cpp  basic_test.txt  basic_test.vcxproj  basic_test.vcxproj.filters  main.cpp
basic/unix/: DirectoryImpl.cpp  DirectoryImpl.h  FileSystemImpl.cpp  TextConvImpl.h  locale_init.h
basic/win/: DirectoryImpl.cpp  DirectoryImpl.h  FileSystemImpl.cpp  ProcessImpl.cpp  TextConvImpl.h  locale_init.h
csv_file/: CMakeLists.txt  CsvTable.cpp  CsvTable.h  ITable.h  Makefile  csv_file.sln  csv_file.txt  csv_file.vcxproj  csv_file.vcxproj.filters  dll_definitions.h
csv_file/csv_file_test/: 1.csv  2.csv  csv_file_test.vcxproj  main.cpp
date/: CMakeLists.txt  Date.cpp  Date.h  DateTime.cpp  DateTime.h  Makefile  Variant.cpp  Variant.h  date.sln  date.txt  date.vcxproj  date.vcxproj.filters  dll_definitions.h
db/: CMakeLists.txt  Convert.h  DbConnectionFactory.cpp  DbConnectionFactory.h  DbException.cpp  DbException.h  IDbBindingTarget.h  IDbCommon.h  IDbConnection.h  IDbField.h  IDbResultSet.h  IDbResultSetMetadata.h  IDbStatement.h  IDbStaticResultSet.h  Makefile  MySQLCommon.cpp  MySQLCommon.h  MySQLConnection.cpp  MySQLConnection.h  MySQLField.cpp  MySQLField.h  MySQLResultSet.cpp  MySQLResultSet.h  MySQLResultSetMetadata.cpp  MySQLResultSetMetadata.h  MySQLStatement.cpp  MySQLStatement.h  MySQLVariant.cpp  MySQLVariant.h  NullDbBindingTarget.h  TransactionGuard.cpp  TransactionGuard.h  db.sln  db.txt  db.vcxproj  db.vcxproj.filters  dll_definitions.h
db/MySQL/: MySQLBindingItem.h  MySQLCommon.cpp  MySQLCommon.h  MySQLConnection.cpp  MySQLConnection.h  MySQLConnectionFactory.cpp  MySQLConnectionFactory.h  MySQLException.cpp  MySQLException.h  MySQLField.cpp  MySQLField.h  MySQLResultSet.cpp  MySQLResultSet.h  MySQLResultSetMetadata.cpp  MySQLResultSetMetadata.h  MySQLStatement.cpp  MySQLStatement.h  MySQLStatementException.cpp  MySQLStatementException.h  MySQLStaticResultSet.cpp  MySQLStaticResultSet.h  MySQLStmtData.cpp  MySQLStmtData.h  MySQLStmtDataEx.cpp  MySQLStmtDataEx.h  MySQLVariant.cpp  MySQLVariant.h
db/Renewable/: DbConnection.cpp  DbConnection.h  ResultSet.cpp  ResultSet.h  Statement.cpp  Statement.h  StmtData.cpp  StmtData.h
db/SQLite/: SQLiteCommon.cpp  SQLiteCommon.h  SQLiteConnection.cpp  SQLiteConnection.h  SQLiteField.cpp  SQLiteField.h  SQLiteResultSet.cpp  SQLiteResultSet.h  SQLiteStatement.cpp  (+3 more)
db_ext/: CMakeLists.txt  CumulativeRS.cpp  CumulativeRS.h  DbEventsHandlersContainer.h  DbInsertHelper.cpp  DbInsertHelper.h  DbInserter.cpp  DbInserter.h  DbTable.cpp  DbTable.h  DbTableDispatcher.cpp  DbTableDispatcher.h  DependentTableUpdater.cpp  DependentTableUpdater.h  FilteringManager.cpp  FilteringManager.h  IBinder.h  IDbCustomer.h  IDbInserter.h  IDbTableEventsHandler.h  IInsertBinder.h  IndexedSearchPredicates.h  InsParamNoGuard.h  Makefile  MetaInfo.cpp  MetaInfo.h  MetaInfoBasic.cpp  MetaInfoBasic.h  PaginalRS.cpp  PaginalRS.h  PaginalStatement.cpp  PaginalStatement.h  Query.cpp  Query.h  QueryModifier.cpp  QueryModifier.h  RevDbResultSet.cpp  RevDbResultSet.h  ScalarQueryCache.cpp  ScalarQueryCache.h  (+12 more)
dbf3/: CMakeLists.txt  DbfStructs.h  DbfTable.cpp  DbfTable.h  dbf3.sln  dbf3.vcxproj  dbf3.vcxproj.filters
grid/: CMakeLists.txt  CellConfigurator.cpp  CellConfigurator.h  CellsLayout.h  ComboBoxCellWidget.cpp  ComboBoxCellWidget.h  DispatcherCell.cpp  DispatcherCell.h  EditableCellWidget.cpp  EditableCellWidget.h  EditableGrid.cpp  EditableGrid.h  EditableTextCell.cpp  EditableTextCell.h  FieldComposer.h  FieldsProperties.h  GCParams.cpp  GCParams.h  Grid.cpp  Grid.h  GridCellWidget.h  GridCommonDeclarations.h  GridLine.h  GridTableProxy.cpp  GridTableProxy.h  ICellWidget.h  IComposedDrawable.h  IConfigurator.h  IDrawable.h  IFieldsProperties.h  IGCParamsList.h  IGridCellWidget.h  IGridCellsContainer.h  IInteractiveObject.h  IReloadable.h  ISharedComposer.h  MultipleCellWidget.cpp  MultipleCellWidget.h  RecordComposer.h  RecordEvaluator.h  (+8 more)
ordersdb_frontend/: AdvocatInserter.cpp  AdvocatInserter.h  AdvocatsBook.cpp  AdvocatsBook.h  AdvocatsGridEvtHandler.cpp  AdvocatsGridEvtHandler.h  BinderControls.h  CMakeLists.txt  FilteringEdit.h  HorizontalSizer.cpp  HorizontalSizer.h  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  QueryModifier.cpp  QueryModifier.h  VerticalSizer.cpp  VerticalSizer.h  config.ini  ordersdb_frontend.sln  ordersdb_frontend.vcxproj  ordersdb_frontend.vcxproj.filters
xwindows/: CMakeLists.txt  HorizontalSizer.cpp  HorizontalSizer.h  Sizer.h  VerticalSizer.cpp  VerticalSizer.h  XApp.cpp  XApp.h  XButton.cpp  XButton.h  XComboBox.cpp  XComboBox.h  XComboBoxEx.cpp  XComboBoxEx.h  XDynamicSizer.cpp  XDynamicSizer.h  XEdit.cpp  XEdit.h  XEvent.cpp  XEvent.h  XEventHandler.cpp  XEventHandler.h  XFrame.cpp  XFrame.h  XGC.cpp  XGC.h  XLabel.cpp  XLabel.h  XPanel.cpp  XPanel.h  XProgressBar.cpp  XProgressBar.h  XWidget.cpp  XWidget.h  XWindow.cpp  XWindow.h  platform_specific.cpp  platform_specific.h  xwindows.vcxproj  xwindows.vcxproj.filters  (+1 more)
xwindows_ex/: CMakeLists.txt  HorizontalSizer.cpp  ITabStopAction.h  ITabStopManager.h  Sizer.cpp  VerticalSizer.cpp  VerticalSizer.h  XCtrlInputFilter.h  XCurrencyField.cpp  XCurrencyField.h  XDateCtrlManager.h  XDateField.cpp  XDateField.h  XDynamicSizer.h  XNullWidget.cpp  XNullWidget.h  XTabStopEdit.cpp  XTabStopEdit.h  XTabStopFrame.h  XTabStopManager.cpp  XTabStopManager.h  XTabStopPanel.h  XTabStopWidget.h  xwindows_ex.vcxproj  xwindows_ex.vcxproj.filters
(+450 files in other folders)
